# UXP1A

./: .gitignore  CMakeLists.txt  README.md  makefile  parser.y  polecenia.txt  scanner.l  shell.lex  shell.y
include/: arg_list.h  builtins.h  defines.h  list.h  log.h  pipe.h  shell.h  task.h  variables.h
src/: arg_list.c  builtins.c  list.c  log.c  main.c  pipe.c  shell.c  task.c  variables.c
test/: exit.c  makefile  print_argv.c  print_env.c  read_write  read_write.c  sleep.c  write  write.c  write_stop.c
